[tool.poetry]
name = "cli-doctor"
version = "0.1.0"
description = ""
authors = ["Subham Singh <subham.singh@hackerearth.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "1.3.7"
python-dotenv = "1.0.0"
ruff = "^0.1.7"
pre-commit = "^3.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
